k8s/04-contracts-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contracts-api-deployment
  labels:
    app: contracts-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contracts-api
  template:
    metadata:
      labels:
        app: contracts-api
    spec:
      containers:
        - name: contracts-api
          image: contracts-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: contracts-api-service
spec:
  selector:
    app: contracts-api
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
  type: NodePort
