k8s/05-flash-sales-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flash-sales-api-deployment
  labels:
    app: flash-sales-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flash-sales-api
  template:
    metadata:
      labels:
        app: flash-sales-api
    spec:
      containers:
        - name: flash-sales-api
          image: flash-sales-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: flash-sales-api-service
spec:
  selector:
    app: flash-sales-api
  ports:
    - port: 3002
      targetPort: 3002
      nodePort: 30002
  type: NodePort
