k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops.local
      http:
        paths:
          - path: /contracts
            pathType: Prefix
            backend:
              service:
                name: contracts-api-service
                port:
                  number: 3001
          - path: /flash-sales
            pathType: Prefix
            backend:
              service:
                name: flash-sales-api-service
                port:
                  number: 3002
